# Dashboard_CNDC

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
cndc_dashboard/: __init__.py
cndc_extractor/: __init__.py  __main__.py
config/: settings.json
data/: ultima_extraccion.json
src/cndc_dashboard/: __init__.py  __main__.py  app.py  cache.py  cli.py  dashboard_service.py  plotly_vendor.py  routes.py  schemas.py  settings.py
src/cndc_dashboard/static/css/: dashboard-rotator.css  fullscreen-dashboard.css
src/cndc_dashboard/static/js/: common.js  dashboard-rotator.js  demanda.js  frecuencia.js  generacion.js
src/cndc_dashboard/templates/: dashboard.html  demanda.html  frecuencia.html  generacion.html
src/cndc_extractor/: __init__.py  __main__.py  cli.py  config.py  date_selector.py  demand.py  exceptions.py  frequency.py  generation.py  har_client.py  http_client.py  logging_config.py  models.py  normalizers.py  storage.py  validators.py
tests/: test_dashboard_routes.py  test_dashboard_service.py  test_date_selector.py  test_demand.py  test_frequency.py  test_generation.py  test_har_client.py
verification_har/data/: ultima_extraccion.json
verification_har/data/normalized/2026-06-18/: demanda_normalizada.csv  frecuencia_normalizada.csv  generacion_normalizada.csv  resumen_validacion.txt
verification_har/data/raw/2026-06-18/: demanda_2026-06-18.json  fechas.json  frecuencia.json  generacion_2026-06-17.json  generacion_2026-06-18.json
verification_run/data/normalized/2026-06-18/: demanda_normalizada.csv  metadata.json  (+3 more)
(+4 files in other folders)
