[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cndc-graficas-extractor"
version = "0.1.0"
description = "Extractor fase 1 para graficas publicas de operacion en tiempo real del CNDC Bolivia."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32,<3",
  "python-dateutil>=2.9,<3",
  "tzdata>=2025.1",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "jinja2>=3.1,<4",
  "plotly>=5.24,<7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
